# Spoof-Lehmer-Factorizations

./: .gitignore  README.md  positive_spoof_execution.py  positive_spoof_factorizations.py  pyproject.toml  spoof_execution.py  spoof_execution_OBE.py  spoof_execution_positive.py  spoof_factorizations.py  spoof_factorizations_OBE.py  spoof_factorizations_positive.py
data/: census_odd_r6.json  census_odd_r7.json  enumerate_odd_r10.db  enumerate_odd_r10.json  enumerate_odd_r6.db  enumerate_odd_r7.db  enumerate_odd_r7.json  enumerate_odd_r8.db
filestore/: positive_even_spoofs.txt  positive_even_spoofs_duration.txt  positive_odd_spoofs.txt  positive_odd_spoofs_duration.txt  positive_spoof_durations.txt  positive_spoofs.txt  spoof_durations.txt  spoofs.txt
papers/: README.md  extension_graph_forest.tex  finishing_feasibility.tex  spoof_lehmer_forests_and_finishing.tex
papers/archive/: extension_graph_forest.tex  (+1 more)
scripts/: emit_organized_census.py  enumerate_all.py  enumerate_all.sh  enumerate_within_k.py  family_analysis.py  forest_analysis.py  forest_analysis.sh  reproduce_census.py  reproduce_census.sh
tests/: test_analysis.py  test_bounds_propagation.py  test_census_organization.py  test_census_organization_module.py  test_chain.py  test_descent_formula.py  test_enumerate.py  test_fermat_theorem.py  test_forest_property.py  test_positive_spoof_factorizations.py  test_progress.py  test_run_ledger.py  test_spoof_factorizations.py  test_spoof_factorizations_OBE.py  test_spoof_factorizations_positive.py  test_strategy_properties.py  test_tracking.py
(+23 files in other folders)
